# codetest

./: dev.md  intern.md  qr  qr.md
data/: IF_price.csv  IF_ref.csv  data.md  description.md  trade.csv
quant1/: .gitignore  README.md  data.md  equity_tick.py  future_price.csv  output.txt  quotes_aggregate.csv  quotes_check.txt  requirements.txt  setup.cfg  setup.py  tesint.csv  testing.csv  testing2.csv  testing3.csv  testing4.csv  trade_checks.txt  trades_aggregate.csv
quant1/benchmark/: performance.py
quant1/data/: future_ref.csv  trade.csv
quant1/db/: USAuction.db
quant1/docs/: data.md
quant1/output/task_1/aggregation/: quotes_aggregate.csv  trades_aggregate.csv
quant1/output/task_1/data_quality_check/: quotes_check.txt  trade_checks.txt
quant1/output/task_2/data_quality_check/: future_price_check.txt  future_ref_check.txt
quant1/output/task_2/futures_rolling/: commodity_future.csv  commodity_rolling_path.csv  index_futures.csv  index_rolling_path.csv  rolling_path.csv
quant1/output/task_3/: schema.csv  sql_data.csv
quant1/src/task_1/: equity_tick.py
quant1/src/task_2/: future_generic_series.py
quant1/src/task_3/: us_treasury_auction.py
