[metadata]
name = quant1_codetest
version = 0.1
author = Simon Yau
author_email = shunmingyau@gmail.com
description = A short description of your project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YourGithub/YourProject
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires = 
    pandas >= 1.0.0
    selenium >= 4.15.0
    matplotlib >= 3.0.0
    webdriver_manager

[options.packages.find]
where = .